+++++++++++++++++++++

CHANGES
-------

* As a side effect of fixing bug #597060 additional arguments passed to testr
  run or testr list are only passed to the underlying test runner if they are
  preceeded by '--'. (Robert Collins, #597060)

* Sphinx has been added to tie the documentation toghether (And it is available
  on testrepository.readthedocs.org). (Robert Collins)

IMPROVEMENTS
------------

* ``AbstractArgument`` now handles the case where additional arguments are
   present that the argument type cannot parse, but enough have been parsed for
   it to be valid. This allows optional arguments to be in the middle of a
   grammar. (Robert Collins)

* ``cli.UI`` now passed '--' down to the argument layer for handling rather
  than implicitly stripping it. (Robert Collins)

* ``DoubledashArgument`` added to allow fine grained control over the impact of
  -- in command lines. (Robert Collins)

* ``testr`` will now show the version. (Robert Collins)

* ``testr last`` when just one test run has been run works again.
  (Robert Collins)

* ``Repository.get_test_run`` now raises KeyError if asked for a missing or
  nonexistant test run. (Robert Collins)

* ``StringArgument`` now rejects '--' - it should be handled by the use of a
  ``DoubledashArgument`` where one is expected. This is a bit awkward and does
  not permit passing '--' down to a child process, so further work may be
  needed - file a bug if this affects you. (Robert Collins)

* ``testr run`` will now fail a test run if the test process exits non-zero.
  As a side effect of this change, if the test program closes its stdout but
  does not exit, ``testr run`` will hang (waiting for the test program to
  exit). (Robert Collins)

* ``testr run --load-list FILENAME`` will limit the tests run to the test ids
  supplied in the list file FILENAME. This is useful for manually specifying
  the tests to run, or running testr subordinate to testr (e.g. on remote 